--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <!--Bootstrap Icons-->
+    <!-- CSS only -->
+  <link href="../node_modules/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <title>React App</title>
   </head>
   <body>
